--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ body{
     background-color: blue;
     
 }
+.dos img{
+    width: 400px;
+    height: 300px;
+    padding-top: 10px;
+}
 
 .unouno{
     width: 350px;
